--- a/index.html
+++ b/index.html
@@ -113,13 +113,16 @@
   <button class="tab-btn" data-tab="number" onclick="openTab('number',this)">Number Tools</button>
   <button class="tab-btn" data-tab="operations" onclick="openTab('operations',this)">Operations</button>
   <button class="tab-btn" data-tab="weather" onclick="openTab('weather',this)">Weather</button>
+  <button class="tab-btn" data-tab="time" id="tab-time-btn" onclick="openTab('time',this)">World Clock</button>
+
 </div>
 
 <div class="container">
 
   <section id="home" class="tab-content active">
     <h1 style="text-align:center;font-size:2.5em;margin:20px 0;color:white">Mithun Tools</h1>
-    <p style="text-align:center;color:white;font-size:1.3em">70+ Free Online Tools • Made in India • No Ads • Works Offline</p>
+    <p style="text-align:center;color:white;font-si
+      70+ Free Online Tools • Made in India • No Ads • Works Offline</p>
     
     <div class="tool-box" style="margin-bottom: 10px;">
         <h3>Tool Search</h3>
@@ -908,6 +911,18 @@ document.addEventListener('DOMContentLoaded', ()=>{
   document.querySelectorAll('.life-subtab').forEach(s=>s.classList.add('hidden'));
   openTab('home', $id('tab-home-btn')); 
 });
+ <section id="time" class="tab-content">
+    <h2 style="color:white">World Clock & Time Zone</h2>
+    <div class="tools-grid">
+      <div class="tool-box" data-tool-name="World Clock Time Zone Finder">
+        <h3>Time Zone Finder (Public API) </h3>
+        <input id="city_time_in" placeholder="Enter City (e.g., London, New York, Tokyo)">
+        <button onclick="getCityTime()">Find Time</button>
+        <div id="city_time_out" class="result">Enter a city/time zone and click Find Time.</div>
+        <p class="disclaimer">Note: Uses **World Time API** (http://worldtimeapi.org) for reliable time zone lookups.</p>
+      </div>
+    </div>
+  </section>
 </script>
 </body>
 </html>
