--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
   <button class="tab-btn" data-tab="fun" onclick="openTab('fun',this)">Fun & Viral</button>
   <button class="tab-btn" data-tab="number" onclick="openTab('number',this)">Number Tools</button>
   <button class="tab-btn" data-tab="operations" onclick="openTab('operations',this)">Operations</button>
-  <button class="tab-btn" data-tab="weather" onclick="openTab('weather',this)">Weather(COMING SOON)</button>
-  <button class="tab-btn" data-tab="time" id="tab-time-btn" onclick="openTab('time',this)">World Clock</button>
+  <button class="tab-btn" data-tab="weather" onclick="openTab('weather',this)">Weather</button>
+  <button class="tab-btn" data-tab="time" id="tab-time-btn" onclick="openTab('time',this)">World Clock(COMING SOON)</button>
 
 </div>
 
