--- a/index.html
+++ b/index.html
@@ -143,6 +143,18 @@
           <textarea id="text_out" class="result" readonly placeholder="Result will appear here"></textarea>
         </div>
     </div>
+  <div class="p-8 bg-white shadow-xl rounded-xl max-w-sm w-full text-center">
+        <!-- The HTML Link -->
+        <a href="privacy-policy.md" 
+           target="_blank" 
+           class="inline-block px-6 py-3 bg-indigo-600 text-white font-semibold rounded-lg shadow-md hover:bg-indigo-700 transition duration-300 ease-in-out transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">
+            View Privacy Policy
+        </a>
+        <p class="mt-4 text-sm text-gray-500">
+            This link targets the file named **privacy-policy.md** in the same directory.
+        </p>
+    </div>
+
   </section>
 
   <section id="smart" class="tab-content">
