--- a/index.html
+++ b/index.html
@@ -100,9 +100,17 @@
         background: var(--accent);
     }
   </style>
+   <script src="https://cmp.gatekeeperconsent.com/min.js" data-cfasync="false"></script>
+<script src="https://the.gatekeeperconsent.com/cmp.min.js" data-cfasync="false"></script>
+  
+<script async src="//www.ezojs.com/ezoic/sa.min.js"></script>
+<script>
+    window.ezstandalone = window.ezstandalone || {};
+    ezstandalone.cmd = ezstandalone.cmd || [];
+</script>
 </head>
 <body>
-
+ 
 <div class="tabs">
   <button class="tab-btn active-tab" data-tab="home" id="tab-home-btn" onclick="openTab('home',this)">Home</button>
   <button class="tab-btn" data-tab="smart" onclick="openTab('smart',this)">Smart Tools</button>
