--- a/index.html
+++ b/index.html
@@ -461,6 +461,8 @@
         <div id="love_result" class="result" style="font-size:28px"></div>
       </div>
     </div>
+    <pre>want to buy sooper cool glasses ,use amzon</pre>
+    <a href="https://amzn.to/48ExUTg">
   </section>
 
   <section id="number" class="tab-content">
