--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
       </div>
     </div>
     <pre>want to buy sooper cool glasses ,use amzon</pre>
-    <a href="https://amzn.to/48ExUTg">
+    <a href="https://amzn.to/48ExUTg">click to open amazon</a>
   </section>
 
   <section id="number" class="tab-content">
