--- a/index.html
+++ b/index.html
@@ -133,6 +133,11 @@
     <h1 style="text-align:center;font-size:2.5em;margin:20px 0;color:white">Mithun Tools</h1>
     <p style="text-align:center;color:white;font-si
       70+ Free Online Tools • Made in India • No Ads • Works Offline</p>
+      <script>
+  type="text/javascript"
+  src="//pl28215301.effectivegatecpm.com/4d/8c/e1/4d8ce12086594caf8d101a4baf6c8b65.js"
+
+  </script>
     
     <div class="tool-box" style="margin-bottom: 10px;">
         <h3>Tool Search</h3>
@@ -450,6 +455,13 @@
         <div id="sip_result" class="result"></div>
       </div>
     </div>
+    native async
+<script
+  async="async"
+  data-cfasync="false"
+  src="//pl28215318.effectivegatecpm.com/08ed9391fe094b045ee9bc6fec496f13/invoke.js"
+></script>
+<div id="container-08ed9391fe094b045ee9bc6fec496f13"></div>
   </section>
 
   <section id="fun" class="tab-content">
