--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -237,10 +238,24 @@
       <div class="tool-box" data-tool-name="Text to PDF Converter">
         <h3>Text to PDF</h3>
        <h4>you can write down sentences and make it into pdf</h4>
-       <pre>note:the pdf would be downloaded automatically after clicking download pdf button,
-       if you using  downloading tool more than one time .it will ask do you want to download the file again click yes this replaces the old one
+       <pre>note:the pdf would be downloaded automatically after 
+       clicking download pdf button,
+       if you using  downloading tool more than one time .it will ask do
+        you want to download the file again click yes this replaces the old one
         if you do not want to rename the file after downloading,</pre>
         <textarea id="pdf_text" placeholder="Enter text to convert to PDF"></textarea>
+        <input type="file" id="pdf_image" accept="image/*">
+        <label>Choose Font</label>
+        <select id="pdf_font">
+        <option value="Times">Times (Normal)</option>
+         <option value="Helvetica">Helvetica</option>
+         <option value="Courier">Courier</option>
+         </select>
+
+         <label>Text Color</label>
+        <input type="color" id="pdf_color" value="#000000">
+
+
         <button onclick="textToPDF()">Download PDF</button>
       </div>
 
@@ -727,14 +742,62 @@
         }
     }
 
-    function textToPDF() {
-        const { jsPDF } = window.jspdf;
-        const doc = new jsPDF();
-        const text = $id('pdf_text').value || 'Hello from Mithun Tools';
-        const lines = doc.splitTextToSize(text, 180);
-        doc.text(lines, 10, 10);
-        doc.save('document.pdf');
-    }
+function textToPDF() {
+  const { jsPDF } = window.jspdf;
+  const doc = new jsPDF();
+
+  const text = document.getElementById("pdf_text").value || "No text entered";
+  const font = document.getElementById("pdf_font").value;
+  const color = document.getElementById("pdf_color").value;
+  const imageInput = document.getElementById("pdf_image");
+
+  // HEX → RGB
+  const r = parseInt(color.substring(1, 3), 16);
+  const g = parseInt(color.substring(3, 5), 16);
+  const b = parseInt(color.substring(5, 7), 16);
+
+  // Apply text styles
+  doc.setFont(font);
+  doc.setTextColor(r, g, b);
+  doc.setFontSize(14);
+
+  // Add text
+  const lines = doc.splitTextToSize(text, 180);
+  doc.text(lines, 10, 20);
+
+  let currentY = 20 + lines.length * 8 + 10;
+
+  // If image exists
+  if (imageInput.files.length > 0) {
+    const file = imageInput.files[0];
+    const reader = new FileReader();
+
+    reader.onload = function (e) {
+      // Add new page if not enough space
+      if (currentY > 200) {
+        doc.addPage();
+        currentY = 20;
+      }
+
+      doc.addImage(
+        e.target.result,
+        "JPEG",
+        10,
+        currentY,
+        180,
+        100
+      );
+
+      doc.save("custom-text-image.pdf");
+    };
+
+    reader.readAsDataURL(file);
+  } else {
+    doc.save("custom-text-image.pdf");
+  }
+}
+
+
 
     let recognition = null;
     let isRecording = false;
