Add new API tools section and button

--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
   <button class="tab-btn" data-tab="number" onclick="openTab('number',this)">Number Tools</button>
   <button class="tab-btn" data-tab="operations" onclick="openTab('operations',this)">Operations</button>
   <button class="tab-btn" data-tab="weather" onclick="openTab('weather',this)">Weather</button>
+  <button class="tab-btn" data-tab="api" onclick="openTab('api'',this)">NEW API  TOOLS</button>
   <button class="tab-btn" data-tab="ABOUT-US" onclick="openTab('ABOUT-US', this)">
   ABOUT US
 </button>
@@ -560,6 +561,16 @@
         <div id="fact_out" class="result"></div>
       </div>
     </div>
+  </section>
+   <section id="api" class="tab-content">
+    <h2 style="color:white">New API tools</h2>
+    <div class="tools-grid">
+      <div class="tool-box" data-tool-name="API">
+        <h3>New API tools</h3>
+       
+      </div>
+    </div>
+   
   </section>
 
   <section id="weather" class="tab-content">
