--- a/index.html
+++ b/index.html
@@ -567,6 +567,8 @@
     <div class="tools-grid">
       <div class="tool-box" data-tool-name="API">
         <h3>New API tools</h3>
+        <img src="ChatGPT Image Feb 15, 2026, 04_12_33PM.png" style="max-width:100%; height:auto;">
+
        
       </div>
     </div>
