Fix API button onclick attribute and update image source

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
   <button class="tab-btn" data-tab="number" onclick="openTab('number',this)">Number Tools</button>
   <button class="tab-btn" data-tab="operations" onclick="openTab('operations',this)">Operations</button>
   <button class="tab-btn" data-tab="weather" onclick="openTab('weather',this)">Weather</button>
-  <button class="tab-btn" data-tab="api" onclick="openTab('api'',this)">NEW API  TOOLS</button>
+  <button class="tab-btn" data-tab="api" onclick="openTab('api',this)">NEW API  TOOLS</button>
   <button class="tab-btn" data-tab="ABOUT-US" onclick="openTab('ABOUT-US', this)">
   ABOUT US
 </button>
@@ -567,7 +567,7 @@
     <div class="tools-grid">
       <div class="tool-box" data-tool-name="API">
         <h3>New API tools</h3>
-        <img src="ChatGPT Image Feb 15, 2026, 04_12_33PM.png" style="max-width:100%; height:auto;">
+        <img src="image.png" style="max-width:100%; height:auto;">
 
        
       </div>
