Add link to new API tools in index.html

--- a/index.html
+++ b/index.html
@@ -568,6 +568,7 @@
       <div class="tool-box" data-tool-name="API">
         <h3>New API tools</h3>
         <img src="image.png" style="max-width:100%; height:auto;">
+        <a href="https://mithunweb01.github.io/api-tools/>CLICK TO OPEN NEW API TOOLS</a>
 
        
       </div>
