Fix link format and typo in About Us section
Corrected the link format and fixed a typo in the About Us section.

--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
       <div class="tool-box" data-tool-name="API">
         <h3>New API tools</h3>
         <img src="image.png" style="max-width:100%; height:auto;">
-        <a href="https://mithunweb01.github.io/api-tools/>CLICK TO OPEN NEW API TOOLS</a>
+        <a href="https://mithunweb01.github.io/api-tools"/>CLICK TO OPEN NEW API TOOLS</a>
 
        
       </div>
@@ -599,7 +599,7 @@
   <p>This is About Us content</p>
   <pre>This is Contact content.the web is created by K.Mithun from chennai
   iam only 11 years  when i created it.Every tools where not there when 
-  created the web.the official reeleaase datee was :December 2025</pre>
+  created the web.the official reelease date was :December 2025</pre>
   <P>email id:k9994270777@gmail.com
  </P>
 </div>
