Update text and script elements in index.html

--- a/index.html
+++ b/index.html
@@ -158,14 +158,13 @@
 
   <section id="home" class="tab-content active">
     <h1 style="text-align:center;font-size:2.5em;margin:20px 0;color:white">Mithun Tools</h1>
-    <p style="text-align:center;color:white;font-si
-      70+ Free Online Tools • Made in India • No Ads • Works Offline</p>
-      <script>
-  type="text/javascript"
-  src="//pl28215301.effectivegatecpm.com/4d/8c/e1/4d8ce12086594caf8d101a4baf6c8b65.js"
-
-  </script>
-    
+    <p style="text-align:center;color:white;font-size:1.1em;">
+      70+ Free Online Tools • Made in India • No Ads • Works Offline
+    </p>
+    <script
+      type="text/javascript"
+      src="//pl28215301.effectivegatecpm.com/4d/8c/e1/4d8ce12086594caf8d101a4baf6c8b65.js"
+    ></script>
     <div class="tool-box" style="margin-bottom: 10px;">
         <h3>Tool Search</h3>
         <input id="tool_search_input" oninput="searchTools()" placeholder="Search for a tool (e.g., BMI, QR, Tax, HCF, PNR)">
@@ -175,7 +174,8 @@
     <div id="home_content">
         <div class="tool-box">
           <h3>Text Tools</h3>
-         <h4>these tools helps you to make modification to your sentences by making every thing small ,big case and removing extra space </h4>
+          <h4>These tools help you modify your sentences by converting case and removing extra spaces.</h4>
+          <textarea id="text_in" placeholder="Type or paste text here..."></textarea>
           <textarea id="text_in" placeholder="Type or paste text here..."></textarea>
           <div style="display:flex;gap:8px;margin-top:8px;flex-wrap:wrap">
             <button onclick="upperText()">UPPERCASE</button>
